syntax = "proto3";

package logger;

import "google/protobuf/timestamp.proto";

option java_package = "com.publica.storm.s3.proto";
option java_outer_classname = "LoggerProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

message Client {
  string pID = 1;
  string sID = 2;
}

message User {
  message GeoIP {
    string IP = 1;
    string country = 2;
    string city = 3;
  }

  string sessID = 1;
  string path = 2;
  bool adblocker = 3;
  string uID = 4;
  string puID = 5;
  string user_agent = 6;
  string device = 7;
  string domain = 8;
  uint64 page_load_time = 9;
  GeoIP location = 10;
}

message Pair {
  string key = 1;
  string value = 2;
}

service Logger {
  rpc LogEvent (Event) returns (Empty) {}
  rpc LogError (Error) returns (Empty) {}
}

message Event {
  enum Type {
    BOOTLOADER_LOADED = 0;
    DISCOVERY_LOADED = 1;
    SESSION_PING = 2;
    PAGE_VIEW = 3;
    IMPRESSION = 4;
    CLICK = 5;
    SKIP = 6;
    ON_SCREEN = 7;
  }

  Type type = 1;
  google.protobuf.Timestamp timestamp = 2;
  Client client = 3;
  User user = 4;
  repeated Pair custom = 5;
}

message Empty { }

message Error {
  uint32 error_code = 1;
  google.protobuf.Timestamp timestamp = 2;
  Client client = 3;
  User user = 4;
  repeated Pair custom = 5;
}
